# new-bing-bot

./: .pre-commit-config.yaml  README.md
.github/workflows/: build_push_docker.yaml  clippy.yaml  new_bing_bot.yaml  pre-commit.yaml
backend/: .gitignore  Dockerfile  README.md  cookies.yaml.example  index.js  package-lock.json  package.json  pnpm-lock.yaml
scripts/: .gitignore  docker-compose.yaml  run_compose_example.sh  run_docker.sh  run_docker_example.sh  stop_compose.sh  stop_docker.sh
telegram_bot/: Cargo.toml  Dockerfile
telegram_bot/src/: main.rs
